Allow the player to move in a 3D space

--- a/Voxalia/Voxalia.csproj
+++ b/Voxalia/Voxalia.csproj
@@ -69,10 +69,19 @@
     <Compile Include="ClientGame\ClientMainSystem\ClientMainBase.cs" />
     <Compile Include="ClientGame\ClientMainSystem\ClientMainRender.cs" />
     <Compile Include="ClientGame\ClientMainSystem\ClientMainTick.cs" />
+    <Compile Include="ClientGame\ClientMainSystem\ClientMainWorld.cs" />
+    <Compile Include="ClientGame\CommandSystem\CommonCommands\QuitCommand.cs" />
     <Compile Include="ClientGame\CommandSystem\NetworkCommands\ConnectCommand.cs" />
     <Compile Include="ClientGame\CommandSystem\ClientOutputter.cs" />
     <Compile Include="ClientGame\CommandSystem\ClientCommands.cs" />
     <Compile Include="ClientGame\CommandSystem\ClientCVar.cs" />
+    <Compile Include="ClientGame\CommandSystem\UICommands\CaptureCommand.cs" />
+    <Compile Include="ClientGame\CommandSystem\UICommands\BackwardCommand.cs" />
+    <Compile Include="ClientGame\CommandSystem\UICommands\RightwardCommand.cs" />
+    <Compile Include="ClientGame\CommandSystem\UICommands\LeftwardCommand.cs" />
+    <Compile Include="ClientGame\CommandSystem\UICommands\ForwardCommand.cs" />
+    <Compile Include="ClientGame\EntitySystem\Entity.cs" />
+    <Compile Include="ClientGame\EntitySystem\Player.cs" />
     <Compile Include="ClientGame\GraphicsSystem\FontSet.cs" />
     <Compile Include="ClientGame\GraphicsSystem\GLFont.cs" />
     <Compile Include="ClientGame\GraphicsSystem\Shader.cs" />
@@ -87,6 +96,9 @@
     <Compile Include="ClientGame\UISystem\KeyHandler.cs" />
     <Compile Include="ClientGame\UISystem\MouseHandler.cs" />
     <Compile Include="ClientGame\UISystem\UIConsole.cs" />
+    <Compile Include="ClientGame\WorldSystem\Block.cs" />
+    <Compile Include="ClientGame\WorldSystem\Chunk.cs" />
+    <Compile Include="ClientGame\WorldSystem\InternalBlockData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerGame\EntitySystem\Entity.cs" />
