Remove the physics engine, add own collision code

--- a/Voxalia/Voxalia.csproj
+++ b/Voxalia/Voxalia.csproj
@@ -49,9 +49,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="BulletSharp">
-      <HintPath>.\BulletSharp.dll</HintPath>
-    </Reference>
     <Reference Include="Frenetic">
       <HintPath>.\Frenetic.dll</HintPath>
     </Reference>
@@ -130,6 +127,7 @@
     <Compile Include="ServerGame\ServerMainSystem\ServerMainWorlds.cs" />
     <Compile Include="ServerGame\WorldSystem\Block.cs" />
     <Compile Include="ServerGame\WorldSystem\Chunk.cs" />
+    <Compile Include="ServerGame\WorldSystem\Collision.cs" />
     <Compile Include="ServerGame\WorldSystem\InternalBlockData.cs" />
     <Compile Include="Shared\ConsoleHandler.cs" />
     <Compile Include="Shared\DataStream.cs" />
