Add a selected block
Currently selects the block above rather than below... will be fixed
soon

--- a/Voxalia/Voxalia.csproj
+++ b/Voxalia/Voxalia.csproj
@@ -86,6 +86,7 @@
     <Compile Include="ClientGame\EntitySystem\Player.cs" />
     <Compile Include="ClientGame\GraphicsSystem\FontSet.cs" />
     <Compile Include="ClientGame\GraphicsSystem\GLFont.cs" />
+    <Compile Include="ClientGame\GraphicsSystem\Renderer.cs" />
     <Compile Include="ClientGame\GraphicsSystem\Shader.cs" />
     <Compile Include="ClientGame\GraphicsSystem\Texture.cs" />
     <Compile Include="ClientGame\NetworkSystem\AbstractPacketIn.cs" />
