Add a serverside command engine

--- a/Voxalia/Voxalia.csproj
+++ b/Voxalia/Voxalia.csproj
@@ -111,6 +111,9 @@
     <Compile Include="ClientGame\WorldSystem\MaterialTexture.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServerGame\CommandSystem\ServerCommands.cs" />
+    <Compile Include="ServerGame\CommandSystem\ServerCVar.cs" />
+    <Compile Include="ServerGame\CommandSystem\ServerOutputter.cs" />
     <Compile Include="ServerGame\EntitySystem\Entity.cs" />
     <Compile Include="ServerGame\EntitySystem\Player.cs" />
     <Compile Include="ServerGame\NetworkSystem\AbstractPacketIn.cs" />
